# ohe-rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.cuda  LICENSE  README.md  benchmark.py  benchmark_threads.py  build.rs  pyproject.toml
.github/workflows/: docker.yml
benches/: ohe_bench.rs
python/ohe_rs/: __init__.py
src/: gpu.rs  lib.rs
src/cuda/: ohe_kernel.cu
