[package]
name = "ohe-rs"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast one-hot encoding library with Python bindings"

[lib]
name = "ohe_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rayon = "1.10"
rustc-hash = "2"
cudarc = { version = "0.19", optional = true, features = ["driver", "cuda-version-from-build-system"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ohe_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
target-cpu = "native"
